Fix safari double borders

--- a/src/ui/components/JobCard/Timeline/Timeline.module.css
+++ b/src/ui/components/JobCard/Timeline/Timeline.module.css
@@ -2,6 +2,7 @@
   padding: 1.5rem 1rem 1.5rem 0;
   margin: 0;
   list-style: none;
+  border: 0;
   border-right-width: 2px;
   border-right-style: solid;
   border-image: linear-gradient(to bottom, #fff, #e2e8f0 10%, #e2e8f0 90%, #fff)
